[project]
name = "pmfic-data-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "polars>=1.31.0",
    "pyodbc>=5.2.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
